Add some updates and support building native installers on Windows, MacOs, Linux